--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -978,17 +978,23 @@ span.pln {
 
 /* Board List */
 div.boardlist {
-	margin-top: 3px;
-	
-	color: #89A;
-	font-size: 9pt;
+	background: #ffffe8;
+  margin-top: 3px;
+  padding: 9px;
+  border-radius: 8px;
+  color: #89A;
+  font-size: 9pt;
+  box-shadow: 1px 8px 7px 0px;
+  border: 1px solid #ff0000;
 }
 div.boardlist.bottom {
 	margin-top: 12px;
 	clear: both;
 }
 div.boardlist a {
-	text-decoration: none;
+  color: red;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 /* Threads */
