--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Expanded:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 body {
   background: #EEF2FF url('img/fade-blue.png') repeat-x 50% 0%;
   color: black;
-  font-family: arial,helvetica,sans-serif;
+  font-family: 'Encode Sans Semi Expanded', sans-serif;
   font-size: 10pt;
   margin: 0 4px;
   padding-left: 4px;
@@ -64,10 +66,10 @@ header {
 }
 
 h1 {
-  font-family: tahoma;
-  letter-spacing: -2px;
-  font-size: 20pt;
-  margin: 0;
+    font-family: 'Encode Sans Semi Expanded', sans-serif;
+    letter-spacing: -2px;
+    font-size: 20pt;
+    margin: 0;
 }
 
 header div.subtitle,h1 {
@@ -978,23 +980,17 @@ span.pln {
 
 /* Board List */
 div.boardlist {
-	background: #ffffe8;
-  margin-top: 3px;
-  padding: 9px;
-  border-radius: 8px;
-  color: #89A;
-  font-size: 9pt;
-  box-shadow: 1px 8px 7px 0px;
-  border: 1px solid #ff0000;
+	margin-top: 3px;
+	
+	color: #89A;
+	font-size: 9pt;
 }
 div.boardlist.bottom {
 	margin-top: 12px;
 	clear: both;
 }
 div.boardlist a {
-  color: red;
-  font-size: 14px;
-  font-weight: 600;
+	text-decoration: none;
 }
 
 /* Threads */
